# ImageVault

./: .gitignore  README.md  cert.crt  cert.key  cert.pem  key.pem  pyproject.toml
account/: authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_profile_photo.py  0003_contact_contact_account_con_created_8bdae6_idx.py
account/templates/: base.html
account/templates/account/: edit.html  register.html  register_done.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html
actions/: models.py  utils.py
actions/migrations/: 0001_initial.py
actions/templates/actions/action/: detail.html
config/: asgi.py  settings.py  urls.py  wsgi.py
images/: admin.py  forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_url_alter_image_image.py  0003_image_total_likes_and_more.py
images/static/images/js/: bookmarklet.js
images/templates/: bookmarklet_launcher.js
images/templates/images/image/: create.html  images_list.html.txt  ranking.html
static/images/css/: images.css
templates/: base.html
