[tool.poetry]
name = "telephoto"
version = "0.1.0"
description = "This is a simple django app for sharing photos"
authors = ["eri-bga <godseeshears@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
