[tool.poetry]
name = "telephoto"
version = "0.1.0"
description = "This is a simple django app for sharing photos"
authors = ["eri-bga <godseeshears@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"
django-bootstrap-v5 = "^1.0.11"
pillow = "^9.4.0"
django-debug-toolbar = "^3.8.1"
django-browser-reload = "^1.6.0"
social-auth-app-django = "^5.0.0"
django-extensions = {git = "https://github.com/django-extensions/django-extensions.git", rev = "25a41d8a3ecb24c009c5f4cac6010a091a3c91c8"}
werkzeug = "^2.2.3"
pyopenssl = "^23.0.0"
requests = "^2.28.2"
easy-thumbnails = "^2.8.5"
redis = "^4.5.5"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
